--- a/source/_docs/patterns/02-molecules/card/_alt-card-styles.scss
+++ b/source/_docs/patterns/02-molecules/card/_alt-card-styles.scss
@@ -292,7 +292,7 @@ Molecule: Cards - Alternate styles
   --h5-size: var(--font-size--md);
   --h6-color: var(--white);
   --h6-size: var(--font-size--md);
-  --link-color: var(--blue--darker--20);
+  --link-color: var(--dark-blue--darker--20);
   --link-color--focus: var(--white);
   --link-color--visited: var(--purple);
   --oline-color: var(--white);
