--- a/source/_docs/patterns/02-molecules/image-link/image-link.scss
+++ b/source/_docs/patterns/02-molecules/image-link/image-link.scss
@@ -229,7 +229,7 @@ Molecule: Image Link
 }
 .blue {
   .image-link {
-    --image-link-overlay-color: var(--blue--darker--20);
+    --image-link-overlay-color: var(--dark-blue--darker--20);
   }
 }
 /*------------------------------------------------------------------------------
