--- a/source/_docs/patterns/03-organisms/navigation/my-western-menu/my-western-menu.scss
+++ b/source/_docs/patterns/03-organisms/navigation/my-western-menu/my-western-menu.scss
@@ -43,7 +43,7 @@ Molecule: Navigation - myWestern Menu
   transform: rotate(-40deg);
   text-transform: uppercase;
   opacity: 0.9;
-  color: var(--blue--darker--40);
+  color: var(--dark-blue--darker--40);
   background-color: var(--light-green);
   font-family: var(--font--title);
   font-size: var(--font-size--lg);
